--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chicken",
   "main": "./lib/chicken",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Chicken chicken chicken chicken chicken chicken",
   "keywords": [
     "chicken"
@@ -14,6 +14,5 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
